--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "ethers": "^5.6.8"
+    "ethers": "^5.6.8",
+    "express": "^4.18.2"
   }
 }
